@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2017-03-23 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Update quickrand
+
 2017-03-22 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add the count integration test in Haskell
